--- a/src/Components/Writing/Writing.scss
+++ b/src/Components/Writing/Writing.scss
@@ -6,3 +6,12 @@
     
   }
 
+  .card{
+    margin-right:40px!important;
+    margin-bottom:20px!important;
+    }
+
+    .card:hover {
+      transform: scale(1.15); /* Apply the hover effect to cards with the class hover-card */
+      transition: transform 0.3s; /* Add a smooth transition effect */
+  }
