fixed padding error

--- a/src/Components/Reading/Reading.scss
+++ b/src/Components/Reading/Reading.scss
@@ -2,6 +2,7 @@
     background-color: #202123;
     background-attachment: fixed;
     background-size: cover;
+    padding-top: 100px;
     
   }
   .cards {
