--- a/src/Components/Science/Science.scss
+++ b/src/Components/Science/Science.scss
@@ -2,6 +2,6 @@
     background-color: #202123;
     background-attachment: fixed;
     background-size: cover;
-    
+    padding-top: 100px;
   }
   
