--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,23 @@ body {
     overscroll-behavior-y: none;
     background-color: #202123;
 }
+
+h1 {
+    font-family: 'Open Sans', sans-serif;
+    color: #fff;
+    text-align: center;
+  }
+
+  .cards {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    padding-left: 70px;
+  }
+ 
+
+ .page {
+  padding-left: 40px;
+  padding-bottom: 20px;
+ }
     
