added smooth transition after hover

--- a/src/Components/Writing/Writing.scss
+++ b/src/Components/Writing/Writing.scss
@@ -9,6 +9,7 @@
   .card{
     margin-right:40px!important;
     margin-bottom:60px!important;
+    transition: transform 0.3s; 
     }
 
     .card:hover {
