darkened background of subjects drop down

--- a/src/Components/sidebar.scss
+++ b/src/Components/sidebar.scss
@@ -1,4 +1,4 @@
 .transparent-dropdown .dropdown-menu {
-    background-color: transparent; /* Set the background color with transparency */
+    background-color: rgb(0, 0, 0, 0.5); /* Set the background color with transparency */
   }
 
